syntax = "proto3";
package pb;

//初始化
message ETCAntInitRequest {
    string Key    = 1;
}

message ETCAntInitResponse {
}

//天线状态
message ETCAntState {
    string AntNo    = 1;
    string State = 2;
}

message ETCAntStateReport{
    string Key    = 1;
    repeated ETCAntState State = 2;
}

//交互信息
message ETCAntReadRequest{
    string Key    = 1;
    string AntNo  = 2;
    string PsamTermid = 3;
	string Msg    = 4;
}

message ETCAntReadResponse {
    string Key    = 1;
    string AntNo  = 2;
	string Msg    = 3;
}
